aqp_platform/deployments/kubernetes/rollback/legacy-management/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: management
  labels:
    app.kubernetes.io/managed-by: rpi-k8s-cluster
